// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Dropdown Button Primary 1`] = `
.c6 {
  box-sizing: content-box;
  width: 10px;
  height: 16px;
  color: currentColor;
}

.c6 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  padding: 0;
  border: 0;
  background: inherit;
  height: 42px;
  border-radius: 90px;
  font-size: 15px;
  line-height: 18px;
  width: auto;
  color: #fff;
  box-shadow: 0 0 1px 0 rgba(17,49,96,0.1),0 4px 8px 0 rgba(17,49,96,0.16);
  font-weight: 600;
  background: linear-gradient(-180deg,#5d9df5 0%,#176ce0 68%);
  -webkit-transition: all 0.15s ease-out;
  transition: all 0.15s ease-out;
  background-size: 1px 52px;
}

.c2:focus,
.c2:active {
  outline: 0;
}

.c2:active {
  box-shadow: 0 0 6px 0 rgba(17,49,96,0.1),0 6px 12px 0 rgba(17,49,96,0.2);
}

.c3 {
  padding: 0 22px;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 .c1 {
  margin-right: 2px;
}

.c0 .c1:not(:first-of-type) {
  border-top-left-radius: 14px;
  border-bottom-left-radius: 14px;
  margin-right: 0;
}

.c0 .c1:not(:last-of-type) {
  border-top-right-radius: 14px;
  border-bottom-right-radius: 14px;
}

.c0 .c1:last-of-type {
  margin-right: 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 14px 18px 18px 14px;
}

.c4 .c5 {
  color: #fff;
}

<div
  className="c0"
>
  <button
    className="c1 c2"
    disabled={false}
  >
    <span
      className="c3"
    >
      Dropdown Button
    </span>
  </button>
  <button
    className="c1 c2"
    disabled={false}
    onClick={[Function]}
  >
    <div
      className="c4"
    >
      <span
        className="c5 c6"
        color="currentColor"
        size={16}
        width={10}
      >
        <svg
          data-file-name="SvgCaretDown"
        />
      </span>
    </div>
  </button>
</div>
`;

exports[`Storyshots Dropdown Button Secondary 1`] = `
.c3 {
  box-sizing: content-box;
  width: 10px;
  height: 16px;
  color: currentColor;
}

.c3 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  padding: 0;
  border: 0;
  background: inherit;
  height: 42px;
  border-radius: 90px;
  font-size: 15px;
  line-height: 18px;
  width: auto;
  border: 1px solid #dfe3ed;
  font-weight: 600;
  padding: 9px 22px 10px;
  color: #132144;
  line-height: 22px;
  background-color: #eef4f6d9;
  -webkit-transition: all 0.15s ease-out;
  transition: all 0.15s ease-out;
  background-size: 1px 42px;
  box-sizing: border-box;
  -webkit-transition: all ease 0.15s;
  transition: all ease 0.15s;
}

.c0:focus,
.c0:active {
  outline: 0;
}

.c0:hover,
.c0:active {
  background-color: #e0ebee;
}

.c4 .c2 {
  color: #fff;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: 12px;
  margin-right: -2px;
}

.c1 .c2 {
  color: #6e849a;
}

<button
  className="c0 "
  disabled={false}
  onClick={[Function]}
>
  Dropdown Button
  <div
    className="c1"
  >
    <span
      className="c2 c3"
      color="currentColor"
      size={16}
      width={10}
    >
      <svg
        data-file-name="SvgCaretDown"
      />
    </span>
  </div>
</button>
`;
